# wifihide

./: .gitignore  LICENSE  README.md  pyproject.toml
src/wifihide/: __main__.py  wifihide.py
src/wifihide/conf/: .ssid_endings  .ssid_prefixes  settings.ini
tests/: test.py
